--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 	}
 	@media screen and (max-width: 650px){
 		.button{
-			width: 100%
+			width: 100%;
+			margin-left: 0;
+			margin-right: 0;
 		}
 	</style>
 
